[metadata]
name = stactools-sentinel1_grd
version = attr: stactools.sentinel1_grd.__version__
description = Stactools package for Sentinel-1 GRD scenes
long_description = file: README.md
long_description_content_type = text/markdown
author = Maxim Lamare
author_email = maxim.lamare@sentinel-hub.com
url = https://github.com/maximlamare/sentinel1-grd
project_urls =
    Issues = https://github.com/maximlamare/sentinel1-grd/issues
keywords =
    stactools
    pystac
    catalog
    STAC
    sentinel
    GRD
    radar
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools == 0.2.1

[options.packages.find]
where = src
